# NutCracker-Template

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
NutCracker/: CMakeLists.txt
NutCracker/NutCracker/: Common.hxx  NutCracker_Base.ixx  NutCracker_Events.ixx  NutCracker_Examples.ixx
NutCracker/NutCracker/Base/: App.ixx  AppInstance.ixx  Event.ixx  README.md  Window.ixx
NutCracker/NutCracker/Core/: Input.ixx  KeyCodes.ixx  Logging.hxx  LoggingExtn.ixx  MouseCodes.ixx  OSUtils.ixx  README.md
NutCracker/NutCracker/Core/Event/: TypeApplication.ixx  TypeKeyboard.ixx  TypeMouse.ixx
NutCracker/NutCracker/Example/: MultipleWindowed.ixx  README.md  Skeleton.ixx  VulkanExample.cppm  VulkanExample.ixx
NutCracker/NutCracker/Utils/: Assets.ixx  HelperMacros.hxx  README.md  Random.ixx
NutCracker/NutCracker/Utils/Vulkan/: DebugMarkers.ixx
NutCracker/src/Platform/: README.md  Window.cppm
NutCracker/src/Platform/Windows/: WindowImpl.ixx  platformInputTranslation.ixx
Prototype/: CMakeLists.txt  README.md
Testbench/: CMakeLists.txt  README.md
Testbench/src/: VulkanAPP.ixx  VulkanAPP_Context.ixx  main.cppm
assets/fonts/: charset.txt
assets/scripts/: shader_compiler.ps1
assets/shaders/: frag.glsl  vert.glsl
assets/shaders/test/: test-frag.glsl  test-vert.glsl
